--- a/src/CromulentBisgetti.ContainerPacking/CromulentBisgetti.ContainerPacking.csproj
+++ b/src/CromulentBisgetti.ContainerPacking/CromulentBisgetti.ContainerPacking.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.0.4</Version>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
